--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build:github": "vite build --mode=github",
+    "build:cloudflare": "vite build --mode=cloudflare",
+    "deploy:github": "npm run build:github && gh-pages -d dist"
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.8",
@@ -38,6 +39,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "image-webpack-loader": "^8.1.0",
     "postcss": "^8.5.6",
